fix(cv): hide the GitHub fork ribbon on tablet and mobile

--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -87,4 +87,8 @@
   .hide-element-on-small-screen {
     display: none !important;
   }
+
+  #fork-me-ongithub-id {
+    display: none !important;
+  }
 }
